# resuma-docs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml.example
.cursor/skills/resuma/: SKILL.md
.github/workflows/: ci.yml  fly.yml
client/: build.mjs  resuma-client.ts
client/components/: docs-copy.ts  docs-flow-worker.ts  hero-particles.ts
src/: main.rs
src/pages/: _registry.rs  index.rs  mod.rs
src/pages/docs/: api.rs  architecture.rs  benchmark.rs  cli.rs  examples.rs  faq.rs  getting_started.rs  index.rs  migration_1_0.rs  package.rs  project_structure.rs  reactivity.rs
src/pages/docs/components/: client.rs  context.rs  control_flow.rs  effects.rs  error_boundary.rs  form.rs  handlers.rs  index.rs  islands.rs  js.rs  nav_link.rs  server.rs  signals.rs  slots.rs  store.rs  tasks.rs  testing.rs  view.rs
src/pages/docs/cookbook/: debouncer.rs  docker.rs  index.rs  loader_invalidation.rs  portals.rs  prg.rs  streaming_loaders.rs  theme.rs  view_transitions.rs
src/pages/docs/exec/: flow_ui.rs  index.rs  ops.rs  queue.rs  scheduler.rs  security.rs  tools.rs  webhooks.rs  workers.rs
src/site/: css.rs  demo_actions.rs  demo_shell.rs  docs_search.rs  exec_demo.rs  exec_guide.rs  flow_panel.rs  flow_ui_demo.rs  hero_bg.rs  integration_demos.rs  mod.rs  pwa.rs  queue_demo.rs  scheduler_demo.rs  seo.rs  server_demo.rs  sidebar.rs  todo_demo.rs  todo_security.rs  tools_demo.rs  webhook_demo.rs  workers.rs
src/site/live_demos/: mod.rs  widgets.rs
(+34 files in other folders)
