[package]
name = "resuma-docs"
version = "0.4.6"
edition = "2021"
publish = false

[[bin]]
name = "website"
path = "src/main.rs"

[dependencies]
# Pin to release tag until 0.4.6 is on crates.io; then switch to: resuma = "0.4.6"
resuma = { git = "https://github.com/GolfredoPerezFernandez/resuma.git", tag = "v0.4.6" }
tokio = { version = "1", features = ["full"] }
