[package]
name = "resuma-docs"
version = "1.2.0"
edition = "2021"
publish = false

[[bin]]
name = "website"
path = "src/main.rs"

[dependencies]
axum = "0.8"
resuma = { git = "https://github.com/GoldevLab/resuma.git", tag = "v1.2.11" }
resuma-flow = { git = "https://github.com/GoldevLab/resuma.git", tag = "v1.2.11", package = "resuma-flow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
